Finish the linking between recipe ingredients and steps videos. Next step to add the main recipe page together with async task for retrieval of data.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Baking</string>
+    <string name="detail_error_message">Error getting intent</string>
+
 </resources>
